--- a/20-3_Story/Report.ipynb
+++ b/20-3_Story/Report.ipynb
@@ -5,7 +5,7 @@
    "id": "5f9925d8-0900-46fa-b170-be65bfeaae5d",
    "metadata": {},
    "source": [
-    "# <p style=\"text-align: center;\">Energy Usage In Our Public Buildings</p>"
+    "# <p style=\"text-align: center;\"> Energy Usage In Our Public Buildings </p>"
    ]
   },
   {
@@ -25,7 +25,7 @@
     "tags": []
    },
    "source": [
-    "## <p style=\"text-align: center;\"><span style=\"color:red\">854x more energy use than a house</p></span>"
+    "## <p style=\"text-align:center; color:red\">854x more energy use than a house</p>"
    ]
   },
   {
