Images & final report

--- a/_Capstone2_MusicGenre/notebooks/02_Exploratory_Data_Analysis.ipynb
+++ b/_Capstone2_MusicGenre/notebooks/02_Exploratory_Data_Analysis.ipynb
@@ -264,6 +264,7 @@
    ],
    "source": [
     "data.hist(figsize=(15, 15), bins=50)\n",
+    "plt.savefig('../images/histogram.png')\n",
     "plt.show()"
    ]
   },
@@ -299,6 +300,7 @@
    "source": [
     "sns.countplot(x='music_genre', data=data)\n",
     "plt.xticks(rotation = 45)\n",
+    "plt.savefig('../images/barchart.png')\n",
     "plt.show()"
    ]
   },
@@ -650,6 +652,7 @@
    ],
    "source": [
     "sns.pairplot(data, hue='music_genre', corner=True, plot_kws={'alpha':0.1})\n",
+    "plt.savefig('../images/pairplot.png')\n",
     "plt.show()"
    ]
   },
@@ -685,6 +688,7 @@
     "\n",
     "fig, ax = plt.subplots(figsize=(15, 15))\n",
     "ax = sns.heatmap(df_dummy.corr(), annot=True)\n",
+    "plt.savefig('../images/heatmap.png')\n",
     "plt.show()"
    ]
   },
