--- a/_Capstone2_MusicGenre/notebooks/01_Data_Wrangling.ipynb
+++ b/_Capstone2_MusicGenre/notebooks/01_Data_Wrangling.ipynb
@@ -1683,7 +1683,8 @@
    "execution_count": 23,
    "id": "25e5da2f",
    "metadata": {
-    "scrolled": true
+    "scrolled": true,
+    "tags": []
    },
    "outputs": [
     {
@@ -1750,7 +1751,9 @@
   {
    "cell_type": "markdown",
    "id": "4573374d",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "Lastly, I have a suspicion that instance_id and track_name are wholly unique."
    ]
